1.修改别名括号 2.注释filter限制维度值类型 3.配置expr的值